--- a/text-elements/pre-textuais/capa.tex
+++ b/text-elements/pre-textuais/capa.tex
@@ -8,7 +8,7 @@
 % \departamento{}
 
 % DADOS DO TRABALHO--------------------------------------------------------------------------------------
-\titulo{Gerenciamento e Acompanhamento de Rotas de Entrega}
+\titulo{Gerenciamento e Acompanhamento de Rotas de Entregas}
 \titleabstract{Delivery Routes Management and Tracking}
 \autor{Gabriel Paulo Capoan Cechet}
 \autorcitacao{CECHET, Gabriel} % Sobrenome em maiúsculo
