--- a/text-elements/textuais/desenvolvimento/desenvolvimento/integracao.tex
+++ b/text-elements/textuais/desenvolvimento/desenvolvimento/integracao.tex
@@ -1,4 +1,4 @@
 As APIs simplificam a forma como os desenvolvedores integram novos componentes de aplicações a uma arquitetura preexistente. Por isso, elas ajudam na colaboração entre as empresas e as equipes de desenvolvimento. Muitas vezes, as necessidades empresariais mudam rapidamente para responder aos mercados digitais em transformação. Nesse ambiente, a ferramenta desenvolvida pode ser integrada em qualquer nicho de mercado que possua a opção de entrega de seus produtos sob gerenciamento de um sistema já existente e aberto a novas integrações.
 %Ajudando a facilitar o dia a dia de estabelecimentos parceiros, que por muitas vezes, tem um fluxo muito grande de pedidos e é necessário uma automação, para uma melhor operação interna e evitar possíveis erros humanos.
 
-Em contato com a equipe de desenvolvimento da plataforma Kitchen (iFood), para um momento curto, eles não demonstraram interesse em tentar integrar os pedidos do aplicativo deles.
+Em contato com a equipe de desenvolvimento da plataforma \textit{Kitchen} (iFood), para um momento curto, eles não demonstraram interesse em tentar integrar os pedidos do aplicativo deles.
