--- a/text-elements/textuais/desenvolvimento/ferramentas/eloquent.tex
+++ b/text-elements/textuais/desenvolvimento/ferramentas/eloquent.tex
@@ -15,4 +15,4 @@ select * from deliveries where id = 1 & Delivery::find(1) \\ \hline
     \fonte{Autor}
 \end{quadro}
 
-Segundo \citeonline{stauffer2017desenvolvendo}, o Eloquent ORM implementa o ActiveRecord, o que significa que uma única classe (\textit{model}) é responsável por interagir com a tabela de forma completa, podendo inserir, atualizar e excluir novos registros.
+Segundo \citeonline{stauffer2017desenvolvendo}, o Eloquent ORM implementa o \textit{ActiveRecord}, o que significa que uma única classe (\textit{model}) é responsável por interagir com a tabela de forma completa, podendo inserir, atualizar e excluir novos registros.
