--- a/text-elements/textuais/desenvolvimento/tecnologias.tex
+++ b/text-elements/textuais/desenvolvimento/tecnologias.tex
@@ -36,11 +36,10 @@ Depois de seu surgimento, o REST passou a representar uma alternativa mais leve 
 \end{itemize}
 
 \subsection{W3C}
-O World Wide Web Consortium é a principal organização de padronização da rede mundial de computadores, desenvolvendo especificações técnicas e orientações através de um processo projetado para maximizar o consenso sobre as recomendações, garantindo qualidades técnicas e editoriais, por meio do desenvolvimento de protocolos comuns e fóruns abertos que promovam a sua evolução e assegurem a sua interoperabilidade, para levar a web ao seu potencial máximo \cite{api:w3c}.
+A World Wide Web Consortium é a principal organização de padronização da rede mundial de computadores, desenvolvendo especificações técnicas e orientações através de um processo projetado para maximizar o consenso sobre as recomendações, garantindo qualidades técnicas e editoriais, por meio do desenvolvimento de protocolos comuns e fóruns abertos que promovam a sua evolução e assegurem a sua interoperabilidade, para levar a web ao seu potencial máximo \cite{api:w3c}.
 
 \section{Geolocalização}
-
-A geolocalização é a capacidade de identificar a localização geográfica, a partir de coordenadas, de determinado objeto ou usuário em monitoramento, com base em dados em tempo real. Esse tipo de sistema tem a capacidade de recuperar as informações de localização por meio do IP, GPS, conexão de \textit{Wi-Fi}, entre outros. A utilização da geolocalização pode se tornar útil para uma serie de objetivos, a exemplo da obtenção de informações sobre um determinado local ou uma rota de navegação \cite{geolocalizacao:2011}.
+A geolocalização é a capacidade de identificar a localização geográfica, a partir de coordenadas, de determinado objeto ou usuário em monitoramento, com base em dados em tempo real. Esse tipo de sistema tem a capacidade de recuperar as informações de localização por meio do IP, GPS, conexão de \textit{wi-fi}, entre outros. A utilização da geolocalização pode se tornar útil para uma serie de objetivos, a exemplo da obtenção de informações sobre um determinado local ou uma rota de navegação \cite{geolocalizacao:2011}.
 
 A API de geolocalização consiste em um método para localizar exatamente a posição de um objeto ou usuário, sendo simples de ser implementada e utilizada. Existem duas formas de realizar a captura da geolocalização através da API, compatível com navegadores em \textit{desktop} ou dispositivos móveis. É necessária a autorização do usuário para acessar as suas informações de geolocalização, pois essas podem comprometer a sua privacidade e integridade \cite{geolocalizacao:2011}.
 
@@ -64,11 +63,10 @@ Compatibilidade com navegadores em dispositivos móveis:
 
 \subsection{Fontes de geolocalização}
 
-Para obter a localização do usuário podem-se utilizar diferentes fontes, as quais têm seu próprio grau de precisão, variação e precisão. Por intermédio do navegador instalado em um \textit{desktop}, o sistema de geolocalização utiliza \textit{Wi-Fi} (com precisão de 20 metros) ou o IP de conexão, que só se faz necessário ao nível de cidade,  uma vez que pode fornecer, algumas vezes, falsas informações. Por sua vez, os dispositivos móveis utilizam a técnica de triangulação do GPS (com precisão de 10m), \textit{Wi-Fi} e GSM/CDMA (com precisão de 1000 metros) \cite{geolocalizacao:2011}.
+Para obter a localização do usuário podem-se utilizar diferentes fontes, as quais têm seu próprio grau de precisão, variação e precisão. Por intermédio do navegador instalado em um \textit{desktop}, o sistema de geolocalização utiliza \textit{wi-fi} (com precisão de 20 metros) ou o IP de conexão, que só se faz necessário ao nível de cidade,  uma vez que pode fornecer, algumas vezes, falsas informações. Por sua vez, os dispositivos móveis utilizam a técnica de triangulação do GPS (com precisão de 10m), \textit{wi-fi} e GSM/CDMA (com precisão de 1000 metros) \cite{geolocalizacao:2011}.
 
 \subsubsection{Métodos: getCurrentPosition e watchPosition}
 
-%%% Rev-Madalozzo: O que você quis dizer sobre o termo "forma assíncrona"?
 Segundo \citeonline{geolocalizacao:2011}, \textit{getCurrentPosition} e \textit{watchPosition} são os possíveis métodos para identificar a posição de um objeto ou usuário. Ambos retornam dados de forma imediata e, depois de forma assíncrona, tentam obter a localização atual. Eles carregam o mesmo número de argumentos, dois deles são opcionais: um \textit{callback}, para quando retornar corretamente o dado, outro \textit{callback}, para se caso ocorra algum tipo de erro, e um objeto \textit{PositionOptions} que apresenta as seguintes opções:
 
 \newpage
@@ -142,7 +140,7 @@ Na \autoref{fig:figura-localizacaoGpsAgps} é possível visualizar como é feita
 
 \section{Google Maps}
 
-O Google Maps é uma aplicação fornecida pela Google amplamente utilizada por aqueles que necessitam de auxílio para chegar a um local desconhecido. Além de oferecer o serviço de mapas, o software inclui outras características muito úteis, como as ferramentas para calcular as direções entre dois pontos. Pode-se obter mais informações sobre qualquer lugar, graças à utilização de fotos, \textit{webcams} e artigos. Seja pelos seus recursos básicos, como encontrar endereços específicos e verificar trajetos e distâncias entre dois ou mais pontos, ou pelos avançados, como a visão de satélite e o Google Street View. Em parte, graças à sua enorme abrangência, poucas cidades e ruas ainda não estão mapeadas nesse serviço, permitindo fazer o \textit{download} de uma área no dispositivo para ser usado sem conexão com a internet. Os mapas salvos dessa forma são renovados a cada 30 dias por meio de redes \textit{Wi-Fi}, caso o usuário fique mais de 30 dias sem usá-los, o aplicativo sugerirá que ele renove a área ou a apague para economizar espaço. Esse recurso é especialmente útil para viagem a outro país e sem plano de dados móveis \cite{google:2019}. Na \autoref{fig:figura-googlemaps}, pode-se ver um exemplo de visualização de mapa do Google Maps.
+O \textit{Google Maps} é uma aplicação fornecida pela Google amplamente utilizada por aqueles que necessitam de auxílio para chegar a um local desconhecido. Além de oferecer o serviço de mapas, o software inclui outras características muito úteis, como as ferramentas para calcular as direções entre dois pontos. Pode-se obter mais informações sobre qualquer lugar, graças à utilização de fotos, \textit{webcams} e artigos. Seja pelos seus recursos básicos, como encontrar endereços específicos e verificar trajetos e distâncias entre dois ou mais pontos, ou pelos avançados, como a visão de satélite e o \textit{Google Street View}. Em parte, graças à sua enorme abrangência, poucas cidades e ruas ainda não estão mapeadas nesse serviço, permitindo fazer o download de uma área no dispositivo para ser usado sem conexão com a internet. Os mapas salvos dessa forma são renovados a cada 30 dias por meio de redes \textit{wi-fi}, caso o usuário fique mais de 30 dias sem usá-los, o aplicativo sugerirá que ele renove a área ou a apague para economizar espaço. Esse recurso é especialmente útil para viagem a outro país e sem plano de dados móveis \cite{google:2019}. Na \autoref{fig:figura-googlemaps}, pode-se ver um exemplo de visualização de mapa do \textit{Google Maps}.
 
 \begin{figure}[H]
     \centering
@@ -152,23 +150,23 @@ O Google Maps é uma aplicação fornecida pela Google amplamente utilizada por 
     \label{fig:figura-googlemaps}
 \end{figure}
 
-A principal ferramenta utilizada no Google Maps é a busca por endereços. A partir de um computador, independentemente do navegador e do sistema operacional, basta digitar o endereço que deseja encontrar. Além de digitar o local manualmente, é possível indicá-lo diretamente no mapa. Também, é possível descobrir novos locais, como lojas, restaurantes, entre outros pontos de interesse facilmente, através de categorias e subcategorias, como “para ir com crianças” ou “para gastar pouco”. Os locais são escolhidos com base na localização atual e que se adaptam ao gosto de cada usuário. É comum ser disponibilizado mais de um caminho para o destino final, exibindo, por padrão, a mais rápido, levando em consideração a variação de trânsito para o horário do momento. Isso é possível porque o Google Maps acumula informações sobre o tráfego da região. Ou seja, ele sabe qual é o fluxo de veículos para um determinado local em um determinado horário. Além de encontrar qualquer localidade, demonstrar informações meteorológicas ou indicações e caminhar ao redor das cidades mais importantes do globo, são seus diferenciais \cite{google:2019}.
+A principal ferramenta utilizada no \textit{Google Maps} é a busca por endereços. A partir de um computador, independentemente do navegador e do sistema operacional, basta digitar o endereço que deseja encontrar. Além de digitar o local manualmente, é possível indicá-lo diretamente no mapa. Também, é possível descobrir novos locais, como lojas, restaurantes, entre outros pontos de interesse facilmente, através de categorias e subcategorias, como “para ir com crianças” ou “para gastar pouco”. Os locais são escolhidos com base na localização atual e que se adaptam ao gosto de cada usuário. É comum ser disponibilizado mais de um caminho para o destino final, exibindo, por padrão, a mais rápido, levando em consideração a variação de trânsito para o horário do momento. Isso é possível porque o \textit{Google Maps} acumula informações sobre o tráfego da região. Ou seja, ele sabe qual é o fluxo de veículos para um determinado local em um determinado horário. Além de encontrar qualquer localidade, demonstrar informações meteorológicas ou indicações e caminhar ao redor das cidades mais importantes do globo, são seus diferenciais \cite{google:2019}.
 
 \newpage
 Para ajudar quem anda de ônibus, metrô ou trem, pelas cidades do mundo, é possível saber a melhor rota de transporte público, qual o ponto de ônibus mais perto e os locais de parada do coletivo. Dispondo de serviços de altitude para ciclistas, é possível identificar as variações do terreno em metros durante o trajeto, além de levar em conta a estrutura cicloviária da cidade. Às vezes, esse caminho pode não ser o mais direto entre os dois pontos, mas ele pretende ser o mais seguro e agradável para quem está pedalando \cite{google:2019}.
 
-Com uma enorme base de dados, serviços como Booking, Decolar ou Kayak, podem ser encontrados ao pesquisar por um hotel na plataforma da Google, contando com uma ferramenta interna para ajudar seus usuários, que apresenta diversas opções de quartos vagos na região, e seus preços médios. Caso o local de visita escolhido durante uma viagem seja bem conhecido, é possível fazer um \textit{tour} pelo espaço interno mapeado. No Maracanâ, por exemplo, é possível visualizar a divisão das arquibancadas. Muitas das opções de uso citadas fazem parte da Google Street View, que mapeia locais possíveis de caminhar virtualmente por várias cidades ao redor do mundo, o que permite encontrar exatamente a fachada do local desejado. Além do Google Earth e dos Indoor Maps, o Google Maps traz também outra função capaz explorar o mundo a partir da tela do computador chamada Google Treks, desenvolvido para visitar virtualmente alguns lugares da Terra \cite{google:2019}.
+Com uma enorme base de dados, serviços como Booking, Decolar ou Kayak, podem ser encontrados ao pesquisar por um hotel na plataforma da Google, contando com uma ferramenta interna para ajudar seus usuários, que apresenta diversas opções de quartos vagos na região, e seus preços médios. Caso o local de visita escolhido durante uma viagem seja bem conhecido, é possível fazer um \textit{tour} pelo espaço interno mapeado. No Maracanâ, por exemplo, é possível visualizar a divisão das arquibancadas. Muitas das opções de uso citadas fazem parte da \textit{Google Street View}, que mapeia locais possíveis de caminhar virtualmente por várias cidades ao redor do mundo, o que permite encontrar exatamente a fachada do local desejado. Além do \textit{Google Earth} e dos \textit{Indoor Maps}, o \textit{Google Maps} traz também outra função capaz explorar o mundo a partir da tela do computador chamada \textit{Google Treks}, desenvolvido para visitar virtualmente alguns lugares da Terra \cite{google:2019}.
 
-Ao selecionar a cidade de partida, a cidade de chegada e o meio de transporte “Avião”, o Google Maps além de exibir informações de voos disponíveis para o trajeto, mostra a duração do voo e quais companhias aéreas operam aquele trajeto \cite{google:2019}. 
+Ao selecionar a cidade de partida, a cidade de chegada e o meio de transporte “Avião”, o \textit{Google Maps} além de exibir informações de voos disponíveis para o trajeto, mostra a duração do voo e quais companhias aéreas operam aquele trajeto \cite{google:2019}. 
 
 O recurso mais recente adicionado à plataforma, permite planejar uma rota com \textit{waypoints}. Esse mecanismo permite fazer percursos que incluam diversas paradas, indicando o melhor caminho do ponto A até B, e depois de B até C, sem precisar mudar a rota novamente, portanto, é muito usado para encontrar o melhor caminho para visitar diversos pontos turísticos de uma cidade no mesmo dia \cite{google:2019}.
 
-Várias ferramentas de visualização geoespacial dos principais \textit{players} da indústria da internet estão tomando o mundo digital. Google, Yahoo, Microsoft e Amazon lançaram ferramentas de mapeamento baseadas em geolocalização e, coletivamente, elevaram o nível de mapeamento da internet. Por mais que suas capacidades funcionais não forneçam nada muito diferente do que fornecedores tradicionais da GIS (\textit{Geographic Information System}) já tinham, o surgimento desses serviços foi notório na medida em que eles conseguiram captar um público mais amplo. O Google entrou como líder desses serviços com seu produto Google Maps, que fornece uma interface visual atrativa, construídas com tecnologia AJAX, além de dados detalhados de imagens aéreas da superfície terrestre, e uma API aberta que permite a personalização do mapa, incluindo a capacidade de adicionar dados específicos ao mapa e de traçar rotas desejadas \cite{geospatial:2009}.
+Várias ferramentas de visualização geoespacial dos principais \textit{players} da indústria da internet estão tomando o mundo digital. Google, Yahoo, Microsoft e Amazon lançaram ferramentas de mapeamento baseadas em geolocalização e, coletivamente, elevaram o nível de mapeamento da internet. Por mais que suas capacidades funcionais não forneçam nada muito diferente do que fornecedores tradicionais da GIS (\textit{Geographic Information System}) já tinham, o surgimento desses serviços foi notório na medida em que eles conseguiram captar um público mais amplo. O Google entrou como líder desses serviços com seu produto \textit{Google Maps}, que fornece uma interface visual atrativa, construídas com tecnologia AJAX, além de dados detalhados de imagens aéreas da superfície terrestre, e uma API aberta que permite a personalização do mapa, incluindo a capacidade de adicionar dados específicos ao mapa e de traçar rotas desejadas \cite{geospatial:2009}.
 
 \newpage
 \subsection{Google Maps Platform}
 
-A plataforma para desenvolvedores da Google se chama Google Maps Platform, em que 99\% de cobertura no mundo, com a abrangência de mais de 200 países e territórios, estão disponíveis. Contemplando informações de local precisas e em tempo real, são mais de 25 milhões de atualizações por dia e 1 bilhão de usuários ativos por mês, tudo isso gerando uma grande base de dados para consulta \cite{google:2019}. Nela, se obtêm soluções para cada setor:
+A plataforma para desenvolvedores da Google se chama \textit{Google Maps Platform}, em que 99\% de cobertura no mundo, com a abrangência de mais de 200 países e territórios, estão disponíveis. Contemplando informações de local precisas e em tempo real, são mais de 25 milhões de atualizações por dia e 1 bilhão de usuários ativos por mês, tudo isso gerando uma grande base de dados para consulta \cite{google:2019}. Nela, se obtêm soluções para cada setor:
 \begin{itemize}
     \item Serviço de transporte particular: disponibiliza a integração com qualquer aplicativo de serviço de transporte particular para diminuir os tempos de espera dos clientes e os erros de navegação dos motoristas;
     \item Jogos: permite criar jogos imersivos e realistas com milhões de estruturas em 3D personalizáveis, dados globais atualizados e integração perfeita com o Unity;
@@ -176,12 +174,10 @@ A plataforma para desenvolvedores da Google se chama Google Maps Platform, em qu
 \end{itemize}
 
 \subsubsection{Maps}
-
-O recurso Maps presente na Google Maps Platform, leva o mundo real até os usuários por meio de mapas estáticos e dinâmicos, imagens do Google Street View e visualizações 360º, visualizando o mundo com mapas eficientes e precisos, podendo ser incorporado em sites ou aplicativos. O Street View e as imagens de satélite permitem  trabalhar com personalizações e sobreposições capazes de se adequar à necessidade de cada usuário, com uma infraestrutura sempre disponível para ampliação \cite{google:2019}. 
+O recurso \textit{Maps} presente na\textit{Google Maps Platform}, leva o mundo real até os usuários por meio de mapas estáticos e dinâmicos, imagens do \textit{Google Street View} e visualizações 360º, visualizando o mundo com mapas eficientes e precisos, podendo ser incorporado em sites ou aplicativos. O \textit{Street View} e as imagens de satélite permitem  trabalhar com personalizações e sobreposições capazes de se adequar à necessidade de cada usuário, com uma infraestrutura sempre disponível para ampliação \cite{google:2019}. 
 
 \subsubsection{Routes}
-
-Através de dados abrangentes e trânsito em tempo real, encontrar o melhor caminho até o destino final se torna um trabalho rápido com o uso do recurso denominado “Routes”. Com informações de navegação confiáveis e mais de 64 milhões de quilômetros de estradas em todo o mundo, traçar percursos entre cidades ou encontrar hotéis, permite maior eficiência, redução de custos e melhora a experiência dos clientes finais. Esse recurso permite planejar viagens munido de dados atualizados sobre a distância entre pontos, trajetos sugeridos e tempos estimados de deslocamento, com a capacidade de criar trajetos eficientes para até 25 pontos de referência, agilizando os sistemas de entrega, criando itinerários para turistas ou guiando os clientes que alugam carros do seu escritório até os hotéis, realocando o mesmo caso o caminho escolhido possua tráfego \cite{google:2019}. Sua eficiência é justificada pelo agrupamento dos seguinte recursos:
+Através de dados abrangentes e trânsito em tempo real, encontrar o melhor caminho até o destino final se torna um trabalho rápido com o uso do recurso denominado \textit{Routes}. Com informações de navegação confiáveis e mais de 64 milhões de quilômetros de estradas em todo o mundo, traçar percursos entre cidades ou encontrar hotéis, permite maior eficiência, redução de custos e melhora a experiência dos clientes finais. Esse recurso permite planejar viagens munido de dados atualizados sobre a distância entre pontos, trajetos sugeridos e tempos estimados de deslocamento, com a capacidade de criar trajetos eficientes para até 25 pontos de referência, agilizando os sistemas de entrega, criando itinerários para turistas ou guiando os clientes que alugam carros do seu escritório até os hotéis, realocando o mesmo caso o caminho escolhido possua tráfego \cite{google:2019}. Sua eficiência é justificada pelo agrupamento dos seguinte recursos:
 
 \newpage
 \begin{itemize}
@@ -191,8 +187,7 @@ Através de dados abrangentes e trânsito em tempo real, encontrar o melhor cami
 \end{itemize}
 
 \subsubsection{Places}
-
-Contempla informações avançadas de mais de 150 milhões de pontos de interesse, permitindo encontrar locais específicos por meio de números de telefone, endereços e sinais em tempo real. Com usuários atualizando a todo momento, 24 horas por dia, as avaliações medidas pela Google se tornam confiantes, capazes de planejar uma viagem ou indicar um restaurante por meio dos gostos dos usuários. Com o Places, é possível compartilhar detalhes sobre nomes de locais, endereços, classificações, comentários, dados de contato e ambiente. Os Local Guides e os usuários enviam milhões de atualizações todos os dias \cite{google:2019}. Este recurso é o maior agrupador de todos, abrange:
+Contempla informações avançadas de mais de 150 milhões de pontos de interesse, permitindo encontrar locais específicos por meio de números de telefone, endereços e sinais em tempo real. Com usuários atualizando a todo momento, 24 horas por dia, as avaliações medidas pela Google se tornam confiantes, capazes de planejar uma viagem ou indicar um restaurante por meio dos gostos dos usuários. Com o \textit{Places}, é possível compartilhar detalhes sobre nomes de locais, endereços, classificações, comentários, dados de contato e ambiente. Os Local Guides e os usuários enviam milhões de atualizações todos os dias \cite{google:2019}. Este recurso é o maior agrupador de todos, abrange:
 
 \begin{itemize}
     \item \textit{Place Details}: fornece nomes, endereços e outros detalhes valiosos, como classificações, avaliações ou dados de contato de pontos de interesse;
@@ -200,6 +195,6 @@ Contempla informações avançadas de mais de 150 milhões de pontos de interess
     \item \textit{Find Place}: localiza usando o número de telefone, endereço ou nome do local;
     \item \textit{Automatic Filling}: sugere informações de local enquanto os usuários digitam;
     \item \textit{Geocoding}: converte endereços em coordenadas geográficas e vice-versa;
-    \item \textit{Geolocation}: captura o local preciso de um dispositivo usando o \textit{Wi-Fi} ou torres de celular como base;
+    \item \textit{Geolocation}: captura o local preciso de um dispositivo usando o \textit{wi-fi} ou torres de celular como base;
     \item \textit{Time Zone}: mostra o fuso horário de qualquer local.
 \end{itemize}
