--- a/text-elements/textuais/desenvolvimento/ferramentas/laravel.tex
+++ b/text-elements/textuais/desenvolvimento/ferramentas/laravel.tex
@@ -1,6 +1,6 @@
-Laravel é um \textit{framework} livre, de código aberto, voltado para desenvolvimento de sistemas baseado em internet e feito em PHP. Tem como principal característica auxiliar no desenvolvimento de aplicações seguras e performáticas de forma rápida, com código limpo e simples, já que ele incentiva o uso de boas práticas de programação e utiliza o padrão PSR-2 como guia para estilo de escrita do código. Foi criado por Taylor Otwell e tem como principal função desenvolver aplicações web com padrão de arquitetura MVC. Algumas características nativas do Laravel são: sua sintaxe descomplicada e concisa, um sistema modular com gerenciador de dependências dedicado, várias formas de acesso a banco de dados relacionais e vários utilitários indispensáveis no auxílio ao desenvolvimento e manutenção de sistemas. O código fonte do Laravel está hospedado no GitHub e licenciado sob os termos da licença MIT \cite{portalgsti:laravel}. 
+Laravel é um \textit{framework} livre, de código aberto, voltado para desenvolvimento de sistemas baseado em internet e feito em PHP. Tem como principal característica auxiliar no desenvolvimento de aplicações seguras e performáticas de forma rápida, com código limpo e simples, já que ele incentiva o uso de boas práticas de programação e utiliza o padrão PSR-2 como guia para estilo de escrita do código. Foi criado por Taylor Otwell e tem como principal função desenvolver aplicações web com padrão de arquitetura MVC. Algumas características nativas do Laravel são: sua sintaxe descomplicada e concisa, um sistema modular com gerenciador de dependências dedicado, várias formas de acesso a banco de dados relacionais e vários utilitários indispensáveis no auxílio ao desenvolvimento e manutenção de sistemas. O código fonte do Laravel está hospedado no GitHub e licenciado sob os termos da licença MIT (Instituto de Tecnologia de Massachusetts) \cite{portalgsti:laravel}. 
 
-Segundo \citeonline{locaweb:laravel}, Laravel é o \textit{framework} que está no top \textit{trends} dos mais buscados no Google, isso desde agosto de 2014, que coincide com o ano de lançamento da versão 5.0. Sua divisão em rotas, \textit{controllers} e \textit{models}, sendo compatível com diversos bancos de dados, trabalhando de forma relacional ou orientada a objetos como: MySQL, Postgress, Redis, MongoDB, Cassandra e SQL Server, utilizando \textit{features} Scaffold ou Internacionalização (i18n), faz com que o Laravel seja altamente compatível. Sendo assim, basta ajustar as configurações e definir qual o banco de dados desejado e o sistema mantém seu funcionamento caso a estrutura estiver pronta, utilizando uma implementação simples do ActiveRecord chamada de Eloquent ORM, que é uma ferramenta que traz várias funcionalidades para facilitar a inserção, atualização, busca e exclusão de registros. Para a criação de interface gráfica, o Laravel utiliza uma \textit{engine} de \textit{template} chamada Blade, que traz uma gama de ferramentas que ajudam a criar interfaces bonitas e funcionais de forma rápida e evitar a duplicação de código.
+Segundo \citeonline{locaweb:laravel}, Laravel é o \textit{framework} que está no top \textit{trends} dos mais buscados no Google, isso desde agosto de 2014, que coincide com o ano de lançamento da versão 5.0. Sua divisão em rotas, \textit{controllers} e \textit{models}, sendo compatível com diversos bancos de dados, trabalhando de forma relacional ou orientada a objetos como: MySQL, Postgress, Redis, MongoDB, Cassandra e SQL Server, utilizando \textit{features} Scaffold ou Internacionalização (i18n), faz com que o Laravel seja altamente compatível. Sendo assim, basta ajustar as configurações e definir qual o banco de dados desejado e o sistema mantém seu funcionamento caso a estrutura estiver pronta, utilizando uma implementação simples do \textit{ActiveRecord} chamada de Eloquent ORM, que é uma ferramenta que traz várias funcionalidades para facilitar a inserção, atualização, busca e exclusão de registros. Para a criação de interface gráfica, o Laravel utiliza uma \textit{engine} de \textit{template} chamada Blade, que traz uma gama de ferramentas que ajudam a criar interfaces bonitas e funcionais de forma rápida e evitar a duplicação de código.
 
 \begin{citacao}
  O Laravel é uma estrutura de aplicativos da web com sintaxe expressiva e elegante. Acreditamos que o desenvolvimento deve ser uma experiência agradável e criativa para ser verdadeiramente gratificante. O Laravel tenta aliviar a dor do desenvolvimento, facilitando tarefas comuns usadas na maioria dos projetos da web \cite{laravel}.
